--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap-select": "^1.13.18",
     "email-js": "^2.0.2",
+    "mobiscroll": "^3.0.0-beta6",
     "react": "^18.2.0",
     "react-bootstrap-select": "^0.14.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.1.6",
     "use-effect": "^0.0.1",
+    "validator": "^13.9.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
