--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "homepage": "https://github.com/snawaza243/news-feed",
   "name": "news-feed",
-  "version": "0.1.0",
+  "version": "0.9.1",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.10.0",
@@ -10,6 +11,8 @@
     "bootstrap-select": "^1.13.18",
     "country-flag-icons": "^1.5.5",
     "email-js": "^2.0.2",
+    "firebase-tools": "^11.24.1",
+    "gh-pages": "^5.0.0",
     "mobiscroll": "^3.0.0-beta6",
     "react": "^18.2.0",
     "react-bootstrap-select": "^0.14.0",
@@ -27,6 +30,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+	  "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -49,5 +54,24 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "description": "A news website using ReactJS and libraries, useEffect, useState, react-router-dom etc.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/snawaza243/news-feed.git"
+  },
+  "keywords": [
+    "News",
+    "Feeds",
+    "Daily",
+    "News",
+    "Updated",
+    "Headlines"
+  ],
+  "author": "Shahnawaz Alam",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/snawaza243/news-feed/issues"
   }
 }
