--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/snawaza243/news-feed",
+  "homepage": "http://snawaza243.github.io/snawaza243/news-feed",
   "name": "news-feed",
   "version": "0.9.1",
   "private": true,
